--- a/main.html
+++ b/main.html
@@ -37,8 +37,8 @@
 <body>
 <div id="slider">
     <script type="text/javascript" src="JS/main_slideshow.js"></script>
-    <a href="#" class="control_next">>></a>
-    <a href="#" class="control_prev"><</a>
+    <a href="#" class="control_next"><<</a>
+    <a href="#" class="control_prev">>></a>
     <ul>
         <li>
             <img src="https://www.50plus.or.kr/upload/im/2019/01/57a058c2-087d-4443-a8be-bb94253ebfa5.jpg"/>
@@ -54,7 +54,7 @@
 
 <div class="cards">
     <div class="card" style="background-color: #051367;">
-        <a href="self-isolation.html">
+        <a href="reservation.html">
             <span><i class="fa-solid fa-plane icon1"></i></span>
             <h1>예매</h1>
         </a>
@@ -69,8 +69,8 @@
 
     <div class="card" style="background-color: #5D8BF4;">
         <a href="confirmed.html">
-            <span><i class="fa-solid fa-plane-up icon1"></i></span>
-            <h1>체크인</h1>
+            <span><i class="fa-solid fa-plane-circle-xmark icon1"></i></span>
+            <h1>예약 취소</h1>
         </a>
     </div>
 
