reservation, onlineTicket, sql, exception

--- a/reservation_check.html
+++ b/reservation_check.html
@@ -27,12 +27,14 @@
 </head>
 <header>
     <div id="topbar">
+        <a href="main.html">
         <img id="logo" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FmTY6l%2Fbtqy91YJt2z%2F8Tz79w07TkrolukN22AJQk%2Fimg.jpg" alt="아냥항공" />
         <div id="menu">
             <div class="login-btn">
                 <a href="404page.html" class="btn_l"><i class="fas fa-sign-in-alt"></i>&nbsp로그인</a>
             </div>
         </div>
+        </a>
     </div>
 </header>
 
@@ -45,7 +47,7 @@
             <input placeholder="예약번호 입력" type="text" tabindex="1" name="reservationNum" required autofocus>
           </fieldset>
           <fieldset>
-            <input placeholder="예약 시 입력한 이름 입력" type="text" tabindex="3" required>
+            <input placeholder="예약 시 입력한 이름 입력" type="text" name="passengerName" tabindex="3" required>
           </fieldset>
           <fieldset>
             <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">예약조회</button>
@@ -57,10 +59,10 @@
 
 </body>
 
-<div class="footer">
+<!--<div class="footer">
     <div id="copy">
         <p>© Copyright 2021 RustShark - All Rights Reserved</p>
     </div>
-</div>
+</div>-->
 
 </html>
