--- a/main.html
+++ b/main.html
@@ -68,9 +68,9 @@
     </div>
 
     <div class="card" style="background-color: #5D8BF4;">
-        <a href="reservaton_cancle.html">
-            <span><i class="fa-solid fa-plane-up icon1"></i></span>
-            <h1>체크인</h1>
+        <a href="reservation_cancel.html">
+            <span><i class="fa-solid fa-plane-circle-xmark icon1"></i></span>
+            <h1>예약 취소</h1>
         </a>
     </div>
 
