0601 reservation page to reservation_chosen page with schedule query

--- a/main.html
+++ b/main.html
@@ -61,21 +61,21 @@
     </div>
 
     <div class="card" style="background-color: #2D31FA;">
-        <a href="vaccination.html">
+        <a href="reservation_check.html">
             <span><i class="fa-solid fa-plane-circle-check icon1"></i></span>
             <h1>예약 조회</h1>
         </a>
     </div>
 
     <div class="card" style="background-color: #5D8BF4;">
-        <a href="confirmed.html">
+        <a href="reservation_cancel.html">
             <span><i class="fa-solid fa-plane-circle-xmark icon1"></i></span>
             <h1>예약 취소</h1>
         </a>
     </div>
 
     <div class="card" style="background-color: #344CB7;">
-        <a href="regionally-location.html">
+        <a href="airline_lotation.html">
             <span><i class="fa-solid fa-plane-departure icon1"></i></span>
             <h1>항공편 현황</h1>
         </a>
