0608 reservation final, receipt

--- a/404page.html
+++ b/404page.html
@@ -20,7 +20,7 @@
 			  </p>
 			  <div class='post-meta'>
 				<span class='comments'>
-				  <a href='main.html'>&#8592; 메인 홈페이지로 돌아가기.</a>
+				  <a href='main.php'>&#8592; 메인 홈페이지로 돌아가기.</a>
 				</span>
 			  </div>
 			</div>
