--- a/reservation.html
+++ b/reservation.html
@@ -22,7 +22,7 @@
         <img id="logo" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FmTY6l%2Fbtqy91YJt2z%2F8Tz79w07TkrolukN22AJQk%2Fimg.jpg" alt="아냥항공" />
         <div id="menu">
             <div class="login-btn">
-                <a href="404page.html" class="btn_l"><i class="fas fa-sign-in-alt"></i>&nbsp로그인</a>
+                <a href="" class="btn_l"><i class="fas fa-sign-in-alt"></i>&nbsp환영합니다</a>
             </div>
         </div>
     </div>
